<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hush!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="login">Login</string>

    <!-- Parse and FB app info -->
    <string name="facebook_app_id">1390710907863212</string>
    <string name="parse_app_id">psNJCoT9RhlnjpthicNrxPVM9llJOrSFbRNgXHjO</string>
    <string name="parse_client_key">DEdGrNxRUjMX6BZqdonXdSkX7AapKqkGxzVQObGW</string>
    
    <!-- Activities -->
    <string name="facebook_exception">Exception: %1$s</string>
    
    <string name="hush_slogan">Use Hush to chat with your friends, anonymously!</string>
    <string name="anonymity_explanation">> All identities are secret\n> You choose friends to chat with but\nno names are displayed while chatting</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="title_activity_all_chats">Chats</string>
    <string name="tab_private_chats">Private</string>
    <string name="tab_public_chats">Public</string>
    <string name="title_activity_new_chat_topic">New Chat Topic</string>
    <string name="title_activity_invite_friends">Invite Friends</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_new_chat">New Chat</string>
    <string name="action_invite_friends">Add Friends</string>
    <string name="action_leave_chat">Leave Chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_total_chatters">Total Chatters</string>
    <string name="action_new_chat_done">Done</string>
    <string name="title_activity_pick_friends">PickFriendsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="logged_out_msg">Logged out!</string>
    <string name="new_chat_push_notif_message">"One of your friends wants to chat!"</string>
    <string name="white_chat_bubble">white chat bubble</string>
    <string name="hush_icon">Hush icon</string>
    <string name="send">SEND</string>
    
    <string name="welcome_to_hush">Welcome to Hush!</string>
    <string name="playbook">Playbook:</string>
    <string name="playbook_list">
> All identities are secret\n
> When chatting, no names are displayed along with the messages\n
> To protect your identity, Hush stores only your publicly available Facebook profile information on the server and your information is never sent to any other phone\n 
> You are automatically added to chats that you\'re invited to but can leave them at any time
	</string>

    <string name="gotchas">Gotchas:</string>
    <string name="gotchas_list">
> When you start a chat, you can invite friends to chat with and know who you are inviting\n
> If you were added to a chat and see only 2 active people in it, the other person probably knows who you are! 
	</string>
    
    <string name="lets_go">Got it, let\'s go!</string>
    <string name="hint_new_chat">What\'s on your mind?</string>
    <string name="title_activity_parse_notifications_handler">ParseNotificationsHandlerActivity</string>

    <!-- ChatListFragment -->
    <string name="chat_list_parse_exception">Cannot load chats</string>

    <!-- ChatWidowActivity -->
    <string name="chat_window_leave_prompt">Leave this chat?</string>
    <string name="title_activity_ftue">FTUEActivity</string>

    <string name="saving_chat">Saving chat</string>
    <string name="loading_chats">Loading chats</string>
    <string name="loading_chatters">Loading chatters</string>
    <string name="loading_messages">Loading messages</string>
    
    
</resources>
