<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hush.FTUEActivity$PlaceholderFragment" >

        <ImageView
            android:id="@+id/ivHushIcon"
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/hush_icon"
            android:src="@drawable/hush_logo_bubble" />

        <com.eevoskos.robotoviews.widget.RobotoTextView
            android:id="@+id/tvWelcomeToHush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivHushIcon"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center"
            android:text="@string/welcome_to_hush"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_huge"
            roboto:typeface="regular" />

        <com.eevoskos.robotoviews.widget.RobotoTextView
            android:id="@+id/tvPlaybook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPlaybookList"
            android:layout_below="@+id/tvWelcomeToHush"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal|center"
            android:text="@string/playbook"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            roboto:typeface="regular" />

        <com.eevoskos.robotoviews.widget.RobotoTextView
            android:id="@+id/tvPlaybookList"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlaybook"
            android:layout_centerHorizontal="true"
            android:gravity="left|fill_horizontal"
            android:text="@string/playbook_list"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            roboto:typeface="regular" />
    
        <com.eevoskos.robotoviews.widget.RobotoTextView
            android:id="@+id/tvGotchas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPlaybookList"
            android:layout_below="@+id/tvPlaybookList"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal|center"
            android:text="@string/gotchas"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            roboto:typeface="regular" />

        <com.eevoskos.robotoviews.widget.RobotoTextView
            android:id="@+id/tvGotchasList"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvGotchas"
            android:layout_below="@+id/tvGotchas"
            android:gravity="left|fill_horizontal"
            android:text="@string/gotchas_list"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            roboto:typeface="regular" />

      	<com.eevoskos.robotoviews.widget.RobotoButton
      	    android:id="@+id/btnLetsGo"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_below="@+id/tvGotchasList"
      	    android:paddingLeft="10dp"
      	    android:paddingRight="10dp"
      	    android:layout_centerHorizontal="true"
      	    android:background="@color/light_purple"
      	    android:enabled="false"
      	    android:onClick="onGoClick"
      	    android:text="@string/lets_go"
      	    android:textColor="@color/purple"
      	    roboto:typeface="regular" />
        
</RelativeLayout>
