<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HushLoginActivity" >
    
    <com.eevoskos.robotoviews.widget.RobotoTextView
        android:id="@+id/tvLoginActivityJoinHushTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivChatIconWhite"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        roboto:typeface="regular"
        android:textColor="@android:color/white"        
        android:gravity="center_horizontal|center"
        android:text="@string/hush_slogan"
        android:textSize="@dimen/text_size_huge" />

    <com.eevoskos.robotoviews.widget.RobotoTextView
        android:id="@+id/tvLoginActivityJoinHushSubtitle"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvLoginActivityJoinHushTitle"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        roboto:typeface="regular"
        android:textColor="@android:color/white" 
        android:gravity="center_horizontal|center"
        android:layout_marginTop="20dp"
        android:text="@string/anonymity_explanation"
        android:textSize="@dimen/text_size_medium" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#dfd6e0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

	    <ImageButton
	        android:id="@+id/btnLoginActivityFacebook"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@null"
	        android:scaleType="fitXY"
	        android:src="@drawable/facebook_connect"
	        android:contentDescription="@string/login_with_facebook"
	        android:onClick="login" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ivChatIconWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLoginActivityJoinHushTitle"
        android:layout_below="@+id/ivHushIcon"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/white_chat_bubble"
        android:scaleType="centerInside"
        android:src="@drawable/chat_icon_white" />

    <ImageView
        android:id="@+id/ivHushIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tvLoginActivityJoinHushTitle"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/hush_icon"
        android:layout_marginRight="50dp"
        android:src="@drawable/hush_logo_bubble" />

</RelativeLayout>
